tests/NormalTests/paczka1/small_fuzzy/57731484.err
Error in line 4: 3n1GeLlJ6o S353 9,8
Error in line 12: l9qV8zC4ue S353 65,1
